# csvdir

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
csvdir/: __init__.py  chunks_dir.py  chunks_factory.py  chunks_iter_enum.py  chunks_iter_path.py  concat_file.py  dir_reader.py  factory.py  iter_enum.py  iter_path.py  pathing.py  utils.py
docs/: CHANGELOG.md  Makefile  conf.py  development.md  getting-started.md  index.md  installation.md  quickstart.md  requirements.txt
docs/_static/: custom.css
docs/guide/: chunking.md  columns.md  discovery.md  encodings.md  headers.md  iteration.md  pandas.md
docs/guides/: index.md
docs/reference/: api.md  index.md  options.md
docs/stylesheets/: extra.css
tests/: conftest.py  test_chunking.py  test_chunking_headers.py  test_concat_file.py  test_dialect.py  test_edge_cases.py  test_encoding_picker.py  test_headers.py  test_iterators_api.py  test_iterators_column_select.py  test_iterators_column_select_chunks.py  test_no_files.py  test_pandas_csvdirfile.py  test_pandas_filelike_compat.py  test_pathing.py  test_quotechar_sniffing.py  test_read.py  test_read_basic.py  test_read_factory.py
tests/data/: people.csv  people2.csv  people3.csv  people6.csv
