[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "csvdir"
version = "0.0.1"
description = "Read all csv files in a directory with one iterator."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = {text = "MIT License"}
keywords = ["csv", "dict", "dir", "directory", "reader"]

[tool.setuptools.packages]
find = {}